# initial-python-project

./: Makefile  README.md  pyproject.toml
src/: sample.py
tests/: context.py  test_sample.py
