[tool.poetry]
name = "initial-python-project"
version = "0.1.0"
description = "Starter for python project"
authors = ["paula <paulaulaula@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"
mypy = "^1.11.2"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
